--- a/index.html
+++ b/index.html
@@ -8,24 +8,18 @@
 </head>
 <body>
   <header class="topbar">
-    <img src="assets/logo.svg" class="logo"/>
+    <img src="assets/logo.svg" alt="Logo" class="logo"/>
     <h1>Pozwolenie / Zezwolenie PSN</h1>
     <nav id="nav"></nav>
   </header>
-
   <main id="app" class="container"></main>
-
-  <footer class="footer">
-    <small>© 2026 – PSN SPA v3</small>
-  </footer>
-
+  <footer class="footer"><small>© 2026 – PSN SPA v3</small></footer>
   <div id="modal" class="modal hidden">
     <div class="modal-body">
       <button id="modal-close" class="ghost" style="float:right">Zamknij</button>
       <div id="modal-content"></div>
     </div>
   </div>
-
   <script type="module" src="app.js"></script>
 </body>
 </html>
