Clean up comments in index.html
Removed comments in Polish regarding CSS and logo image, and updated the comment for the script tag.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>PSN SPA v3</title>
-
-  <!-- TO JEST WAŻNE: prawdziwy link do CSS -->
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header class="topbar">
-    <!-- TO JEST WAŻNE: prawdziwy obrazek logo -->
     <img src="assets/logo.svg" alt="Logo" class="logo"/>
     <h1>Pozwolenie / Zezwolenie PSN</h1>
     <nav id="nav"></nav>
@@ -29,7 +26,7 @@
     </div>
   </div>
 
-  <!-- TO JEST NAJWAŻNIEJSZE: prawdziwy skrypt z type="module" -->
+  <!-- WAŻNE: modułowy skrypt -->
   <script type="module" src="app.js"></script>
 </body>
 </html>
